tests/sumo/devices/ssm/errors/filter_edges_junction_not_found/errors.sumo.agg
Warning: Unknown junction ID 'CC' in SSM device edge filter (input_selection.txt): junction:CC
Warning: 1 total messages of type: No measures specified for ssm device of vehicle '%'. Registering all available SSMs.
